# bencoding

./: Makefile.am  README  bencoding.c  bencoding.h  configure.ac  ivartjbencoding.pc.in  json.c
tests/: Makefile.am  dict.c  integer.c  json.c  jsonmetafile.c  list.c  metafile.c  minix.torrent  string.c  valstring.c
