TESTS = integer string list dict valstring metafile json

check_PROGRAMS = $(TESTS)

integer_SOURCES = integer.c
string_SOURCES = string.c
list_SOURCES = list.c
dict_SOURCES = dict.c

valstring_SOURCES = valstring.c

metafile_SOURCES = metafile.c
metafile_LDADD = ../libivartjbencoding.la

json_SOURCES = json.c
json_LDADD = ../libivartjbencoding.la
